--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Git & GitHub Crash Course</title>
+    <title>Git & GitHub Crash Course!</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-        <img id="logo" src="logo.png" alt="A logo that contains the word 'Git'" />
-
-    <h1>Git & GitHub Crash Course</h1>
-    <p>Because the basics are important!</p>
+    <img id="logo" src="logo.png" alt="A logo that contains the word 'Git'" />
+    <h1>Git & GitHub Crash Course!</h1>
+    <p>Because the basics are important.</p>
 </body>
 </html>
